website/versioned_docs/0.18/tabbarios-item.md
---
id: version-0.18-tabbarios-item
title: tabbarios-item
original_id: tabbarios-item
---
<a id="content"></a><h1>TabBarIOS.Item</h1><div><noscript></noscript><h3><a class="anchor" name="props"></a><a class="edit-github" href="https://github.com/facebook/react-native/blob/master/Libraries/Components/TabBarIOS/TabBarItemIOS.ios.js">Edit on GitHub</a>Props <a class="hash-link" href="#props">#</a></h3><div class="props"><div class="prop"><h4 class="propTitle"><a class="anchor" name="view"></a><a href="view.html#props">View props...</a> <a class="hash-link" href="#view">#</a></h4></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="badge"></a>badge <span class="propType">string, number</span> <a class="hash-link" href="#badge">#</a></h4><div><p>Little red bubble that sits at the top right of the icon.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="icon"></a>icon <span class="propType">Image.propTypes.source</span> <a class="hash-link" href="#icon">#</a></h4><div><p>A custom icon for the tab. It is ignored when a system icon is defined.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="onpress"></a>onPress <span class="propType">function</span> <a class="hash-link" href="#onpress">#</a></h4><div><p>Callback when this tab is being selected, you should change the state of your
component to set selected={true}.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="selected"></a>selected <span class="propType">bool</span> <a class="hash-link" href="#selected">#</a></h4><div><p>It specifies whether the children are visible or not. If you see a
blank content, you probably forgot to add a selected one.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="selectedicon"></a>selectedIcon <span class="propType">Image.propTypes.source</span> <a class="hash-link" href="#selectedicon">#</a></h4><div><p>A custom icon when the tab is selected. It is ignored when a system
icon is defined. If left empty, the icon will be tinted in blue.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="style"></a>style <span class="propType"><a href="view.html#style">View#style</a></span> <a class="hash-link" href="#style">#</a></h4><div><p>React style object.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="systemicon"></a>systemIcon <span class="propType">enum('bookmarks', 'contacts', 'downloads', 'favorites', 'featured', 'history', 'more', 'most-recent', 'most-viewed', 'recents', 'search', 'top-rated')</span> <a class="hash-link" href="#systemicon">#</a></h4><div><p>Items comes with a few predefined system icons. Note that if you are
using them, the title and selectedIcon will be overridden with the
system ones.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="title"></a>title <span class="propType">string</span> <a class="hash-link" href="#title">#</a></h4><div><p>Text that appears under the icon. It is ignored when a system icon
is defined.</p></div></div></div></div><div class="docs-prevnext"><a class="docs-next" href="text.html#content">Next →</a></div>