website/versioned_docs/0.45/tabbarios-item.md
---
id: version-0.45-tabbarios-item
title: tabbarios-item
original_id: tabbarios-item
---
<a id="content"></a><h1><a class="anchor" name="tabbarios-item"></a>TabBarIOS.Item <a class="hash-link" href="docs/tabbarios-item.html#tabbarios-item">#</a></h1><div><noscript></noscript><h3><a class="anchor" name="props"></a>Props <a class="hash-link" href="docs/tabbarios-item.html#props">#</a></h3><div class="props"><div class="prop"><h4 class="propTitle"><a class="anchor" name="viewproptypes"></a><a href="docs/viewproptypes.html#props">ViewPropTypes props...</a> <a class="hash-link" href="docs/tabbarios-item.html#viewproptypes">#</a></h4></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="badge"></a>badge?: <span class="propType">PropTypes.oneOfType([
  PropTypes.string,
  PropTypes.number,
])</span> <a class="hash-link" href="docs/tabbarios-item.html#badge">#</a></h4><div><p>Little red bubble that sits at the top right of the icon.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="badgecolor"></a>badgeColor?: <span class="propType"><a href="docs/colors.html">color</a></span> <a class="hash-link" href="docs/tabbarios-item.html#badgecolor">#</a></h4><div><p>Background color for the badge. Available since iOS 10.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="icon"></a>icon?: <span class="propType">Image.propTypes.source</span> <a class="hash-link" href="docs/tabbarios-item.html#icon">#</a></h4><div><p>A custom icon for the tab. It is ignored when a system icon is defined.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="onpress"></a>onPress?: <span class="propType">PropTypes.func</span> <a class="hash-link" href="docs/tabbarios-item.html#onpress">#</a></h4><div><p>Callback when this tab is being selected, you should change the state of your
component to set selected={true}.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="renderasoriginal"></a>renderAsOriginal?: <span class="propType">PropTypes.bool</span> <a class="hash-link" href="docs/tabbarios-item.html#renderasoriginal">#</a></h4><div><p>If set to true it renders the image as original,
it defaults to being displayed as a template</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="selected"></a>selected?: <span class="propType">PropTypes.bool</span> <a class="hash-link" href="docs/tabbarios-item.html#selected">#</a></h4><div><p>It specifies whether the children are visible or not. If you see a
blank content, you probably forgot to add a selected one.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="selectedicon"></a>selectedIcon?: <span class="propType">Image.propTypes.source</span> <a class="hash-link" href="docs/tabbarios-item.html#selectedicon">#</a></h4><div><p>A custom icon when the tab is selected. It is ignored when a system
icon is defined. If left empty, the icon will be tinted in blue.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="style"></a>style?: <span class="propType">ViewPropTypes.style</span> <a class="hash-link" href="docs/tabbarios-item.html#style">#</a></h4><div><p>React style object.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="systemicon"></a>systemIcon?: <span class="propType">PropTypes.oneOf([
  'bookmarks',
  'contacts',
  'downloads',
  'favorites',
  'featured',
  'history',
  'more',
  'most-recent',
  'most-viewed',
  'recents',
  'search',
  'top-rated',
])</span> <a class="hash-link" href="docs/tabbarios-item.html#systemicon">#</a></h4><div><p>Items comes with a few predefined system icons. Note that if you are
using them, the title and selectedIcon will be overridden with the
system ones.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="title"></a>title?: <span class="propType">PropTypes.string</span> <a class="hash-link" href="docs/tabbarios-item.html#title">#</a></h4><div><p>Text that appears under the icon. It is ignored when a system icon
is defined.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="istvselectable"></a><span class="platform">ios</span>isTVSelectable?: <span class="propType">PropTypes.bool</span> <a class="hash-link" href="docs/tabbarios-item.html#istvselectable">#</a></h4><div><p>(Apple TV only)* When set to true, this view will be focusable
and navigable using the Apple TV remote.</p></div></div></div></div><p class="edit-page-block">You can <a target="_blank" href="https://github.com/facebook/react-native/blob/master/Libraries/Components/TabBarIOS/TabBarItemIOS.ios.js">edit the content above on GitHub</a> and send us a pull request!</p><div class="docs-prevnext"><a class="docs-prev" href="docs/tabbarios.html#content">← Prev</a><a class="docs-next" href="docs/text.html#content">Next →</a></div>